--- a/wiki/it/Mesh_Export.html
+++ b/wiki/it/Mesh_Export.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Mesh_Export.html" class="mw-pt-progress mw-pt-progress--complete" title="Mesh Exportieren (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Mesh_Export.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Mesh Export (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Mesh_Export.html" class="mw-pt-progress mw-pt-progress--complete" title="Mesh Exporter un maillage (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../hu/Mesh_Export.html" class="mw-pt-progress mw-pt-progress--low" title="H&aacute;l&oacute; export&aacute;l&aacute;sa (8% translated)" lang="hu" dir="ltr">magyar</a></li>
 <li><a href="../pl/Mesh_Export.html" class="mw-pt-progress mw-pt-progress--complete" title="Siatka: Eksport (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/Mesh_Export.html" class="mw-pt-progress mw-pt-progress--low" title="Mesh: Export (8% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -60,16 +60,14 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Selezionare un singolo oggetto mesh.</li>
 <li>Esistono diversi modi per invocare il comando:
-<ul><li>Premere il pulsante <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Mesh_Export.svg&amp;filetimestamp=20200625160326&amp;.html" class="mw-file-description"><img src="../File/Mesh_Export.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Esporta mesh...</a></span>.</li>
-<li>Selezionare l'opzione <b>Mesh &rarr; <span typeof="mw:File"><a href="../index.php?title=Mesh_Export.svg&amp;filetimestamp=20200625160326&amp;.html" class="mw-file-description"><img src="../File/Mesh_Export.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Esporta mesh...</b> dal menu.</li>
-<li>Selezionare l'opzione <b><span typeof="mw:File"><a href="../index.php?title=Mesh_Export.svg&amp;filetimestamp=20200625160326&amp;.html" class="mw-file-description"><img src="../File/Mesh_Export.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Esporta mesh...</b> dal menu contestuale della <a href="../it/Tree_view.html" class="mw-redirect" title="Tree view/it">vista ad albero</a> o della <a href="../it/3D_view.html" class="mw-redirect" title="3D view/it">vista 3D</a>.</li></ul></li>
+<ul><li>Premere il pulsante <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Mesh_Export.svg&amp;filetimestamp=20200625160326&amp;.html" class="mw-file-description"><img src="../File/Mesh_Export.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Esporta Mesh...</a></span>.</li>
+<li>Selezionare l'opzione <b>Mesh &rarr; <span typeof="mw:File"><a href="../index.php?title=Mesh_Export.svg&amp;filetimestamp=20200625160326&amp;.html" class="mw-file-description"><img src="../File/Mesh_Export.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Esporta Mesh...</b> dal menu.</li>
+<li>Selezionare l'opzione <b><span typeof="mw:File"><a href="../index.php?title=Mesh_Export.svg&amp;filetimestamp=20200625160326&amp;.html" class="mw-file-description"><img src="../File/Mesh_Export.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Esporta Mesh...</b> dal menu contestuale della <a href="../it/Tree_View.html" title="Tree View/it">Vista ad Albero</a> o della <a href="../it/3D_View.html" title="3D View/it">Vista 3D</a>.</li></ul></li>
 <li>Selezionare il formato file corretto nella finestra di dialogo.</li>
 <li>Inserisci un nome file. Se nel passaggio precedente &egrave; stata selezionata l'opzione <code>Tutti i file (*.*)</code> e non si specifica un'estensione di file, viene utilizzata l'estensione <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.stl</span>.</li>
 <li>Premere il pulsante <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Salva</span>.</li></ol>
-</div>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Note">Note</span></h2>
@@ -126,35 +124,35 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118125904
+Cached time: 20260118130018
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.121 seconds
-Preprocessor visited node count: 325/1000000
+CPU time usage: 0.084 seconds
+Real time usage: 0.316 seconds
+Preprocessor visited node count: 324/1000000
 Post&#8208;expand include size: 15028/2097152 bytes
 Template argument size: 4855/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2423/5000000 bytes
+Unstrip post&#8208;expand size: 2427/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   28.290      1 -total
- 30.64%    8.668      1 Template:Mesh_Tools_navi/it
- 15.00%    4.242      1 Template:Userdocnavi/it
- 12.38%    3.503      2 Template:Navigation_menu_2
-  9.29%    2.628      1 Template:Value
-  8.96%    2.534      1 Template:Code
-  8.83%    2.499      2 Template:Docnav/it
-  8.52%    2.410      1 Template:GuiCommand/it
-  4.45%    1.258      2 Template:Incode
-  4.22%    1.193      1 Template:Clear
+100.00%  120.818      1 -total
+ 21.85%   26.402      1 Template:Mesh_Tools_navi/it
+ 14.61%   17.657      1 Template:Userdocnavi/it
+ 13.29%   16.054      1 Template:GuiCommand/it
+ 10.63%   12.841      1 Template:Value
+  8.99%   10.867      2 Template:MenuCommand
+  8.59%   10.378      2 Template:Docnav/it
+  7.08%    8.556      1 Template:Code
+  6.54%    7.897      1 Template:Clear
+  5.61%    6.781      2 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67373-0!canonical and timestamp 20260118125903 and revision id 1740501. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67373-0!canonical and timestamp 20260118130018 and revision id 1740507. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
