--- a/wiki/it/Mesh_Import.html
+++ b/wiki/it/Mesh_Import.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Mesh_Import.html" class="mw-pt-progress mw-pt-progress--complete" title="Mesh Importieren (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Mesh_Import.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Mesh Import (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Mesh_Import.html" class="mw-pt-progress mw-pt-progress--complete" title="Mesh Importer un maillage (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../hu/Mesh_Import.html" class="mw-pt-progress mw-pt-progress--low" title="H&aacute;l&oacute; import&aacute;l&aacute;sa (7% translated)" lang="hu" dir="ltr">magyar</a></li>
 <li><a href="../pl/Mesh_Import.html" class="mw-pt-progress mw-pt-progress--complete" title="Siatka: Import (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ro/Mesh_Import.html" class="mw-pt-progress mw-pt-progress--low" title="Mesh: Import (7% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -60,15 +60,13 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div class="mw-translate-fuzzy">
 <ol><li>Esistono diversi modi per invocare il comando:
-<ul><li>Premere il pulsante <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Mesh_Import.svg&amp;filetimestamp=20200625160451&amp;.html" class="mw-file-description"><img src="../File/Mesh_Import.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Importa mesh...</a></span>.</li>
-<li>Selezionare l'opzione <b>Mesh &rarr; <span typeof="mw:File"><a href="../index.php?title=Mesh_Import.svg&amp;filetimestamp=20200625160451&amp;.html" class="mw-file-description"><img src="../File/Mesh_Import.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Importa mesh...</b> dal menu.</li>
-<li>Selezionare l'opzione <b><span typeof="mw:File"><a href="../index.php?title=Mesh_Import.svg&amp;filetimestamp=20200625160451&amp;.html" class="mw-file-description"><img src="../File/Mesh_Import.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Importa mesh...</b> dal menu contestuale della <a href="../it/Tree_view.html" class="mw-redirect" title="Tree view/it">vista ad albero</a> o della <a href="../it/3D_view.html" class="mw-redirect" title="3D view/it">vista 3D</a>. Questa opzione &egrave; disponibile solo se &egrave; stato selezionato un oggetto mesh esistente. Notare che l'oggetto selezionato non viene effettivamente utilizzato o modificato dal comando.</li></ul></li>
+<ul><li>Premere il pulsante <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=Mesh_Import.svg&amp;filetimestamp=20200625160451&amp;.html" class="mw-file-description"><img src="../File/Mesh_Import.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Importa Mesh...</a></span>.</li>
+<li>Selezionare l'opzione <b>Mesh &rarr; <span typeof="mw:File"><a href="../index.php?title=Mesh_Import.svg&amp;filetimestamp=20200625160451&amp;.html" class="mw-file-description"><img src="../File/Mesh_Import.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Importa Mesh...</b> dal menu.</li>
+<li>Selezionare l'opzione <b><span typeof="mw:File"><a href="../index.php?title=Mesh_Import.svg&amp;filetimestamp=20200625160451&amp;.html" class="mw-file-description"><img src="../File/Mesh_Import.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Importa Mesh...</b> dal menu contestuale della <a href="../it/Tree_View.html" title="Tree View/it">Vista ad Albero</a> o della <a href="../it/3D_View.html" title="3D View/it">Vista 3D</a>. Questa opzione &egrave; disponibile solo se &egrave; stato selezionato un oggetto mesh esistente. Notare che l'oggetto selezionato non viene effettivamente utilizzato o modificato dal comando.</li></ul></li>
 <li>Facoltativamente, selezionare il formato file corretto nella finestra di dialogo.</li>
 <li>Selezionare un file.</li>
 <li>Premere il pulsante <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Apri</span>.</li></ol>
-</div>
 <p><span id="Supported_file_formats"></span>
 </p>
 <h2><span class="mw-headline" id="Formati_di_file_supportati">Formati di file supportati</span></h2>
@@ -125,35 +123,35 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118130046
+Cached time: 20260118130120
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.185 seconds
-Preprocessor visited node count: 300/1000000
+CPU time usage: 0.087 seconds
+Real time usage: 0.266 seconds
+Preprocessor visited node count: 299/1000000
 Post&#8208;expand include size: 14325/2097152 bytes
 Template argument size: 4541/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2004/5000000 bytes
+Unstrip post&#8208;expand size: 2008/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   48.126      1 -total
- 28.90%   13.908      1 Template:Mesh_Tools_navi/it
- 21.24%   10.223      2 Template:Docnav/it
- 19.13%    9.204      1 Template:Userdocnavi/it
-  9.37%    4.508      2 Template:Navigation_menu_2
-  6.52%    3.137      1 Template:GuiCommand/it
-  5.84%    2.812      1 Template:Clear
-  4.89%    2.352      2 Template:MenuCommand
-  4.57%    2.197      2 Template:Button
-  4.04%    1.945      1 Template:Code
+100.00%  116.758      1 -total
+ 23.74%   27.721      1 Template:Mesh_Tools_navi/it
+ 19.97%   23.316      1 Template:Userdocnavi/it
+ 16.96%   19.801      1 Template:Incode
+  8.05%    9.396      2 Template:Docnav/it
+  7.68%    8.967      2 Template:Navigation_menu_2
+  6.71%    7.839      2 Template:MenuCommand
+  6.28%    7.328      1 Template:Clear
+  6.22%    7.268      1 Template:Code
+  5.00%    5.838      1 Template:GuiCommand/it
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67364-0!canonical and timestamp 20260118130045 and revision id 1740509. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:67364-0!canonical and timestamp 20260118130120 and revision id 1740513. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
