--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -204,9 +204,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectHorizontalAxis.svg&amp;filetimestamp=20240101115648&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectHorizontalAxis.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectHorizontalAxis.html" title="Sketcher SelectHorizontalAxis">Vybrat horizont&aacute;ln&iacute; osu</a>: Vybere horizont&aacute;ln&iacute; osu n&aacute;&#269;rtu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_SelectVerticalAxis.svg&amp;filetimestamp=20240101115720&amp;.html" class="mw-file-description"><img src="../File/Sketcher_SelectVerticalAxis.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_SelectVerticalAxis.html" title="Sketcher SelectVerticalAxis">Vybrat vertik&aacute;ln&iacute; osu</a>: Vybere vertik&aacute;ln&iacute; osu n&aacute;&#269;rtu.</li></ul>
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Translate.svg&amp;filetimestamp=20240222145016&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Translate.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Translate.html" title="Sketcher Translate">P&#345;esun/transformace pole</a>: P&#345;esouv&aacute; nebo voliteln&#283; vytv&aacute;&#345;&iacute; kopie vybran&yacute;ch prvk&#367;. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Rotate.svg&amp;filetimestamp=20240101115504&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Rotate.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Rotate.html" title="Sketcher Rotate">Rotate/Polar Transform</a>: Rotates or optionally creates rotated copies of selected elements. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
-</div>
+<ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Rotate.svg&amp;filetimestamp=20240101115504&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Rotate.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Rotate.html" title="Sketcher Rotate">Rotace/Polarn&iacute; transformace</a>: Ot&aacute;&#269;&iacute; nebo voliteln&#283; vytv&aacute;&#345;&iacute; oto&#269;en&eacute; kopie vybran&yacute;ch prvk&#367;. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li><span typeof="mw:File"><a href="../index.php?title=Sketcher_Scale.svg&amp;filetimestamp=20240207133809&amp;.html" class="mw-file-description"><img src="../File/Sketcher_Scale.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Scale.html" title="Sketcher Scale">Scale</a>: Scales or optionally creates scaled copies of selected elements. <span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span></li></ul>
 </div>
@@ -618,13 +616,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118130224
+Cached time: 20260118130410
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.455 seconds
-Real time usage: 0.657 seconds
-Preprocessor visited node count: 1460/1000000
+CPU time usage: 0.428 seconds
+Real time usage: 0.605 seconds
+Preprocessor visited node count: 1459/1000000
 Post&#8208;expand include size: 35004/2097152 bytes
 Template argument size: 9800/2097152 bytes
 Highest expansion depth: 7/100
@@ -634,19 +632,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.954      1 -total
- 24.93%   11.705      1 Template:Sketcher_Tools_navi/cs
- 21.35%   10.025      1 Template:Userdocnavi/cs
- 15.49%    7.272      2 Template:Navigation_menu_2
-  9.30%    4.368      1 Template:PropertyView
-  6.88%    3.231     34 Template:Version
-  6.71%    3.149      2 Template:Docnav
-  5.20%    2.441      1 Template:Variable
-  4.43%    2.081      6 Template:Caption
-  4.01%    1.881      1 Template:TOCright
+100.00%   36.911      1 -total
+ 24.32%    8.975      1 Template:Sketcher_Tools_navi/cs
+ 13.24%    4.888      2 Template:Navigation_menu_2
+ 11.98%    4.422      1 Template:Userdocnavi/cs
+ 11.27%    4.161      1 Template:PropertyView
+  8.48%    3.132      6 Template:Caption
+  8.13%    3.001     34 Template:Version
+  5.85%    2.159      2 Template:Docnav
+  5.56%    2.053      1 Template:Variable
+  5.31%    1.961      8 Template:VersionPlus
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118130223 and revision id 1740515. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118130409 and revision id 1740517. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
